--- a/style/main.css
+++ b/style/main.css
@@ -93,7 +93,7 @@ li:hover {
     border-bottom: 1px solid #000000;
 }
 
-li button {
+li a {
     display: none;
     color: #008CBA;
     align-self: flex-end;
@@ -101,6 +101,6 @@ li button {
     cursor: pointer;
 }
 
-li:hover button {
+li:hover a {
     display: block;
 }
